--- a/new.plone.org/TODO.txt
+++ b/new.plone.org/TODO.txt
@@ -7,11 +7,21 @@ Remaining tasks:
 [ ] Make the inputLabel JS in Plone capable of inserting type="search" on search boxes, so we can keep valid HTML (JS from Martijn)
 [ ] Add tile JS and classes (JS from Martijn)
 [ ] Fix login page
-[ ] Fix plone_control_panel (#region-content)
+[ ] Fix plone_control_panel, dashboard (#region-content?)
 [ ] Make a first draft of the Support page
 [ ] Print CSS
-[ ] Sprites for images
+[x] Sprites for images, possibly inverted arrow for colors
+[ ] Convert CSS to shorthand properties
+[ ] Remove all color profiles
 
+Right before launch:
+[ ] Meet with Iain, make sure all the colors are correct and have no color profiles.
+[ ] Check that site doesn't totally break in IE6, have Denis assist here.
+[ ] Check that site looks OK in Ubuntu + Firefox
+[ ] Minimize HTTP requests and check cache headers
+[ ] Make sure JS and CSS is minified (YUI Compressor does a good job on CSS)
+[ ] Make sure all the JS is combined into a single file served up by Plone
+[ ] Get comparison stats (KB/HTTP req) from old vs. new for announcement
 
 Shortly after launch (can be prepared up front):
 
