--- a/deus-cron/collective-docs.plone.org
+++ b/deus-cron/collective-docs.plone.org
@@ -1,2 +1,2 @@
 #!/bin/sh
-0 0 * * * cd /srv/collective-docs.plone.org; svn up; make html
+0 0 * * * root cd /srv/collective-docs.plone.org; svn up; make html
