I can't get these to work, so I added them via 'crontab -e' as root
svn path=/deus-cron/trunk/; revision=39533

--- a/deus-cron/collective-docs.plone.org
+++ b/deus-cron/collective-docs.plone.org
@@ -1,2 +1,2 @@
-#!/bin/sh
-0 0 * * * root cd /srv/collective-docs.plone.org; svn up; make html
+##!/bin/sh
+#0 0 * * * root cd /srv/collective-docs.plone.org; svn up; make html
