--- a/antiloop-apache/antiloop.plone.org
+++ b/antiloop-apache/antiloop.plone.org
@@ -2,7 +2,7 @@
 	ServerName	antiloop.plone.org
 
 	DocumentRoot	/srv/antiloop.plone.org/http/root
-	Redirect    /   http://dist.plone.org
+	Redirect    /   http://dist.plone.org/
 
 	CustomLog	/var/log/apache2/antiloop.plone.org/access.log combined
 	ErrorLog	/var/log/apache2/antiloop.plone.org/error.log
