Unrevert, not sure what's breaking http://dev.plone.org
svn path=/plone.org/deus-apache/trunk/; revision=47415

--- a/deus-apache/dev.plone.org
+++ b/deus-apache/dev.plone.org
@@ -145,7 +145,7 @@ LoadModule transform_module /usr/lib/apache2/modules/mod_transform.so
 #		AuthLDAPUrl	ldap://localhost:389/ou=People,dc=plone,dc=org
 #	</LocationMatch>
 
-#    RedirectMatch ^/old$ /trac-theme
+    RedirectMatch ^/old$ /trac-theme
 
 </VirtualHost>
 
